Was the fix THAT simple?